# jarvis

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CONTEXT.md  DOCUMENTATION_INDEX.md  EXECUTIVE_BRIEF.md  IMPLEMENTATION_GUIDE.md  ISSUES_VISUAL_SUMMARY.md  LICENSE  NEXT_STEPS.md  PHASE1_COMPLETE.md  README.md  SECURITY.md  SETUP.md  docker-compose.agents.yml  install-manifest.yaml  install.ps1  install.sh  llms.txt  package-lock.json  package.json  project_vision.md  pyproject.toml
.claude/: CLAUDE.md  README.md  settings.json  settings.local.json
.claude-userlevel/: .mcp.json  CLAUDE.md  README.md  settings.json
.claude-userlevel/skills/: AIHERO_CREDIT.md
.claude/agents/: coding.md
.claude/commands/: end.md  reflect.md  repo-health.md  self-improve.md  skills.md
.claude/skills/: delegate.md  intel.md  issue-health.md  research.md  risk-radar.md  self-improve.md  self-review.md  triage.md
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  dependabot.yml  github-process-runbook.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  task.yml
.github/workflows/: auto-merge-enable.yml  ci-meta.yml  ci.yml  code-review-retry.yml  code-review.yml  copilot-review-response.yml  daily-triage.yml  event-dispatch.yml  gitleaks.yml  issue-area-label-sync.yml  issue-checks.yml  issue-schema-check.yml  merge-train.yml  owner-queue-guard.yml  parent-notify.yml  pr-body-check.yml  pr-merged.yml  project-sync.yml  pytest.yml  review-debt-collector.yml  review-response.yml  schema-drift-check.yml  weekly-report.yml
.out-of-scope/: afk-chain-meta-tooling.md  bulk-epic-terminology-sweep.md  decision-audit-90d-2026-05-18.md
.sandcastle/: .env.example  Dockerfile  README.md  container-mcp.json  main.mts  prompt.md
THIRD_PARTY_LICENSES/: aihero-skills-MIT.txt
agents/: README.md  __init__.py  config.py  dispatcher.py  escalation.py  event_monitor.py  executor.py  github_client.py  main.py  ollama_client.py  orchestrator.py  parked_requeue_poller.py  perception_github.py  pid_sidecar.py  poller.py  safety.py  scheduler.py  scope_hash.py  supabase_client.py  task_dispatch.py  task_queue.py  usage_probe.py  wake_driver.py
config/: IDENTITY.md  SETUP.md  SOUL.md  USER.md  pm-prompt.md  protected-paths.json  repos.conf  research-topics.yaml
configs/: default.yaml  tools.yaml.example
design/: _template.md  design_questions.md  overall_project_update.md  self_improvement.md  stabilization_plan.md
docs/: DEVICES.md  MIGRATION_STATUS.md  PHASE3_VERIFICATION.md  PROJECT_PLAN.md  VISION.md  architecture.md  deslop-standard.md  llm_providers.md  phase1_implementation.md  phase3_basic_tools.md  phase4_human_in_loop.md  phase5_gap_analyzer.md  phase6_cli_polish.md  phase7_completion_summary.md  research-aihero-principles.md  research-practical-claude-problems.md  roadmap.md  team-meeting-agenda.md  team-network-proposal.md  telegram-setup.md  uml-mcp-setup.md
docs/adr/: 0001-skill-trigger-model.md  0002-shared-protocol-in-global-claude-md.md  0003-implicit-memory-derivation.md  0004-comm-patterns-taxonomy.md
docs/agents/: dispatcher.md  e2e-test.md  escalation.md  langgraph-setup.md  observability.md  ollama-setup.md  ollama-workshop-bench-538.md  perception.md  reactive-core-setup.md  safety.md  sandcastle-setup.md  scheduler.md  usage_probe.md
evals/: README.md  nightly-research.yaml  reflect.yaml  run_evals.py  self-improve.yaml
mcp-memory/: classifier.py  client.py  embeddings.py  episode_extractor.py  events_canonical.py  recall.py  requirements.txt  review_render.py  schema.sql  server.py  tools_schema.py  trace_context.py  write_scrubber.py
mcp-status/: server.py
reports/: 2026-W12.md  self-review-20260324-153428.md  self-review-20260324-153522.md  self-review-20260324-154228.md  self-review-20260324-154302.md
scripts/: advance-global-tasks.py  audit-anthropic-api-key.ps1  audit_anchors.py  backfill-outcome-memories.py  bench-ollama.ps1  capture-episode.py  check-memory-deriver-schema.py  code_review_retry.py  comm-patterns-backfill.py  comm-patterns-extract.py  consolidation-merge-plan.py  consolidation-report.py  consolidation-review.py  consolidation-rollback.py  consolidation-run.py  delegate_predispatch_gate.py  deriver-accumulator.py  deriver-sessionend.py  device-info.py  dispatcher_smoke_live.py  dreamer-run.py  dump-decisions-quarterly.py  eval-recall.py  evolve-neighbors.py  evolve-run.py  fok-batch.py  memory-dedup-check.py  memory-recall-hook.py  migrate-memory-structure.py  pending-volume-watcher.py  post-commit  pre-compact-backup.py  pretooluse-recall-hook.py  principal.py  probe-ollama-toolcall.ps1  protected-files.py  recall-audit.py  record-decision-gate.py  reembed-canonical.py  review_debt_collector.py  (+19 more)
src/: comment_classifier.py  diff_gate.py  main.py  risk_radar.py  token_refresh.sh  trace_inventory.py
tests/: README.md  conftest.py  supabase_fake.py  test_access_boost_debias_767.py  test_agents_953_event_emission.py  test_agents_dispatcher.py  test_agents_dispatcher_e2e.py  test_agents_escalation.py  test_agents_executor.py  test_agents_integration.py  test_agents_perception_github.py  test_agents_pid_sidecar.py  test_agents_safety.py  test_agents_scheduler.py  test_agents_smoke.py  test_agents_supabase_bridge.py  test_agents_task_dispatch.py  test_agents_task_queue.py  test_agents_usage_probe.py  test_backfill_outcome_memories.py  test_ci_failure_integration.py  test_classifier.py  test_comm_patterns_backfill.py  test_comm_patterns_classifier.py  test_comm_patterns_extractor.py  test_comm_patterns_scrubber.py  test_consolidation_review.py  test_delegate_predispatch_gate.py  test_deriver_accumulator.py  test_deriver_escalation.py  test_deriver_pipeline.py  test_diff_gate.py  test_dispatch_dedup.py  test_dreamer.py  test_dump_decisions_quarterly.py  test_embeddings_normalize.py  test_episode_extractor.py  test_events_canonical_substrate.py  test_events_canonical_writer.py  test_events_queue.py  (+70 more)
(+494 files in other folders)
