[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-agent"
version = "0.4.1"
description = "Jarvis — universal personal AI agent built on Claude Code + MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Osasuwu" }
]
keywords = ["ai", "agent", "claude", "mcp", "personal-assistant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# Core: MCP memory server (cross-device persistent memory via Supabase)
memory = [
  "mcp>=1.0.0",
  "supabase>=2.0.0",
  "voyageai>=0.2.3",
  "httpx>=0.27",
  "pyyaml>=6.0",
]
# Pillar 7: LangGraph persistent agents (Ollama + Postgres checkpointer + Supabase bridge)
agents = [
  "langgraph>=0.2.50",
  "langchain-ollama>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary,pool]>=3.1",
  "ollama>=0.4.0",
  # Supabase bridge — agents read/write memories/events/goals/audit_log directly
  # (MCP is Claude-Code-only, so graph nodes need a native client).
  "supabase>=2.0.0",
  # GitHub Events API client. supabase-py pulls httpx transitively today,
  # but agents/github_client.py depends on it unconditionally — declare it
  # explicitly so the contract doesn't depend on a transitive.
  "httpx>=0.27",
  # Pillar 7 Sprint 2: scheduler primitive (agents/scheduler.py, #300).
  # APScheduler's SQLAlchemyJobStore needs SQLAlchemy; pin ranges that
  # work with psycopg v3 (already pulled in above).
  "apscheduler>=3.10",
  "sqlalchemy>=2.0",
]
# All runtime components
full = [
  "jarvis-agent[memory]",
  "jarvis-agent[agents]",
]
# Development
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/Osasuwu/jarvis"
Issues = "https://github.com/Osasuwu/jarvis/issues"

[tool.setuptools]
# Mixed layout:
#   - `agents/` package lives at repo root (Pillar 7 agents)
#   - `risk_radar.py` remains a flat module under `src/` (legacy)
# Explicit declarations so `pip install -e ".[agents]"` installs the root-layout
# `agents` package correctly, rather than silently skipping it.
package-dir = {"" = "src", "agents" = "agents"}
packages = ["agents"]
py-modules = ["risk_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
